--- a/app/css/main.css
+++ b/app/css/main.css
@@ -8,6 +8,7 @@
   --greyblack: rgb(38, 38, 38);
   --white: #fff;
   --footer-bg-colour: #333;
+  --vh: 1vh;
 }
 
 html {
@@ -26,7 +27,6 @@ body {
   display: grid;
   grid-gap: 20px;
   margin: 0;
-  min-height: 100vh;
   grid-template-rows: auto 1fr auto;
   background: #efefef;
   font-size: 1.6rem;
